--- a/parte2/frase.css
+++ b/parte2/frase.css
@@ -8,3 +8,66 @@
 7 ritardare progressivamente l'animazione delle altre 2 parole 
 */
 
+main {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#testoAlternato {
+  line-height: 1.5;
+  border: 2px solid black;
+  padding: 20px;
+  width: 30vw;
+  font-family: "Bree Serif", sans-serif;
+  text-shadow: 1px 1px 1px rgba(146, 146, 146, 0.8);
+  color: #333;
+}
+.parole {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  height: 15px;
+  width: 130px;
+  overflow: hidden;
+  float: right;
+  position: relative;
+  right: 11vw;
+}
+
+.parole i {
+    position: absolute;
+    color: #6b969d; 
+    opacity: 0; 
+    animation-name: titleParole;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-delay: 0s;
+}
+  
+.parole i:nth-child(2) {
+    animation-delay: 1s;
+}
+  
+ .parole i:nth-child(3) {
+    animation-delay: 2s;
+}
+  
+  @keyframes titleParole {
+    from {
+      opacity: 0;  
+      top: -20px;  
+    }
+    15% {
+      opacity: 1; 
+      top: -5px;   
+    }
+    50% {
+      opacity: 0;  
+      top: 25px;   
+    }
+  }
+  
+
